--- a/boarding.css
+++ b/boarding.css
@@ -56,15 +56,16 @@
 }
 .fxs_poster .fxs_back,
 .fxs_two-cols-stripe-bg .fxs_back {
-  line-height: 36px;
+  line-height: 28px;
 }
 .fxs_two-cols-stripe-bg .fxs_onboarding_info .fxs_list_unstyled {
   margin-top: 2rem;
 }
+.fxs_poster .fxs_list_unstyled li,
 .fxs_two-cols-stripe-bg .fxs_onboarding_info .fxs_list_unstyled li {
   margin-bottom: 1rem;
 }
-
+.fxs_poster .fxs_list_unstyled .fas,
 .fxs_two-cols-stripe-bg .fxs_onboarding_info .fxs_list_unstyled .fas {
   color: #338473;
   padding-right: 5px;
@@ -173,13 +174,23 @@
 }
 .fxs_poster {
   border: 1px solid #a3a3a8;
-  padding: 3rem;
+  padding: 1rem;
   margin-top: 100px;
   margin-bottom: 100px;
   max-width: 600px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+@media (min-width: 768px) {
+  .fxs_poster {
+    padding: 3rem;
+  }
 }
 .fxs_poster.fxs_big-poster {
-  max-width: 900px;
+  max-width: 1100px;
+}
+.fxs_poster.fxs_poster-medium {
+  max-width: 800px;
 }
 /* flex.less (modify original and remove after done)*/
 @supports (display: flex) or (display: -webkit-flex) or (display: -webkit-box)
@@ -498,10 +509,12 @@ input.fxs_input_error {
   display: flex;
   justify-content: flex-start;
   padding: 0.5rem;
-  flex: 0 0;
-  margin-right:1rem;
-  margin-bottom:1rem;
-  min-width: 230px;
+  flex: 1 1;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  min-width: 250px;
+  cursor: pointer;
+  font-weight: 400;
 }
 
 .fxs_chip-checkbox .fas {
@@ -521,13 +534,23 @@ input.fxs_input_error {
   white-space: nowrap;
   line-height: 3rem;
   padding: 0 0.5rem;
+  font-weight: 900;
 }
 .fxs_chip-checkbox .fxs_avatar {
-    flex: 0 0  75px;
-    width:75px;
-    height: 75px;
-    border-radius: 100%;
-    overflow: hidden;
+  flex: 0 0 75px;
+  width: 75px;
+  height: 75px;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.fxs_chip-checkbox .fxs_contributorBox {
+  display: flex;
+}
+.fxs_chip-checkbox .fxs_avatar_circleImage_m {
+  flex: 0 0 50px;
+}
+.fxs_chip-checkbox .fxs_article_author {
+  padding-left: 0.5rem;
 }
 input[type="checkbox"]:checked + .fxs_chip-checkbox {
   background-color: #dddedf;
