--- a/boarding.css
+++ b/boarding.css
@@ -59,13 +59,13 @@
   line-height: 28px;
   text-decoration: underline;
   position: relative;
+  margin-left: 1.2rem;
 }
 .fxs_back .fas {
   position: absolute;
   top: 50%;
-  left: 1.2rem;
+  left: -1.2rem;
   transform: translateY(-50%);
-  margin-left: 1.2rem;
 }
 .fxs_two-cols-stripe-bg .fxs_onboarding_info .fxs_list_unstyled {
   margin-top: 2rem;
@@ -519,47 +519,73 @@ input.fxs_input_error {
   justify-content: flex-start;
   padding: 0.5rem;
   flex: 1 1;
-  margin-right: 1rem;
+  margin-right: 3vw;
   margin-bottom: 1rem;
   min-width: 250px;
   cursor: pointer;
   font-weight: 400;
 }
-
 .fxs_chip-checkbox .fas {
-  font-size: 2rem;
+  font-size: 1rem;
   color: white;
   background-color: #304c70;
   border-radius: 100%;
-  width: 3rem;
-  height: 3rem;
+  width: 2rem;
+  height: 2rem;
   padding: 0.5rem;
-  flex: 0 0 3rem;
+  flex: 0 0 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 2rem;
+}
+@media (min-width: 768px) {
+  .fxs_chip-checkbox .fas {
+    font-size: 2rem;
+    width: 3rem;
+    height: 3rem;
+    flex: 0 0 3rem;
+    margin-left: 0;
+  }
 }
 .fxs_chip-checkbox .fxs_newsletter-name {
   white-space: nowrap;
-  line-height: 3rem;
+  line-height: 2rem;
   padding: 0 0.5rem;
   font-weight: 900;
 }
-.fxs_chip-checkbox .fxs_avatar {
-  flex: 0 0 75px;
-  width: 75px;
-  height: 75px;
+.fxs_chip-checkbox .fxs_avatar_circleImage_m {
+  flex: 0 0 50px;
+  width: 50px;
+  height: 50px;
   border-radius: 100%;
   overflow: hidden;
+  margin-left: 4vw;
+}
+@media (min-width: 768px) {
+  .fxs_chip-checkbox .fxs_newsletter-name {
+    line-height: 3rem;
+  }
+  .fxs_chip-checkbox .fxs_avatar_circleImage_m {
+    flex: 0 0 75px;
+    width: 75px;
+    height: 75px;
+    margin-left: 0;
+  }
 }
 .fxs_chip-checkbox .fxs_contributorBox {
   display: flex;
 }
-.fxs_chip-checkbox .fxs_avatar_circleImage_m {
-  flex: 0 0 50px;
-}
+
 .fxs_chip-checkbox .fxs_article_author {
   padding-left: 0.5rem;
+}
+.fxs_chip-checkbox .fxs_article_author .fxs_headline_small{
+    line-height: 1rem;
+}
+
+.fxs_chip-checkbox .fxs_article_author .fxs_author_description span{
+    white-space: nowrap;
 }
 input[type="checkbox"]:checked + .fxs_chip-checkbox {
   background-color: #dddedf;
@@ -568,16 +594,18 @@ input[type="checkbox"]:checked + .fxs_chip-checkbox {
 .fxs_right-mobile-center {
   text-align: center;
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 0;
 }
 @media (min-width: 1024px) {
   .fxs_right-mobile-center {
     float: right;
     width: auto;
+    text-align: left;
   }
   .fxs_left-mobile-center {
     float: left;
     width: auto;
+    text-align: left;
   }
 }
 .fxs_txt-underline {
