--- a/boarding.css
+++ b/boarding.css
@@ -185,12 +185,13 @@
   margin-top: 40px;
   margin-bottom: 100px;
   max-width: 600px;
+  padding: 0 2rem;
 }
-@media(min-width:1024px){
-    .fxs_poster{
-        border: 1px solid #a3a3a8;
-        padding:3rem;
-    }
+@media (min-width: 1024px) {
+  .fxs_poster {
+    border: 1px solid #a3a3a8;
+    padding: 3rem;
+  }
 }
 .fxs_poster.fxs_big-poster {
   max-width: 1100px;
@@ -577,12 +578,12 @@ input.fxs_input_error {
 .fxs_chip-checkbox .fxs_article_author {
   padding-left: 0.5rem;
 }
-.fxs_chip-checkbox .fxs_article_author .fxs_headline_small{
-    line-height: 1rem;
+.fxs_chip-checkbox .fxs_article_author .fxs_headline_small {
+  line-height: 1rem;
 }
 
-.fxs_chip-checkbox .fxs_article_author .fxs_author_description span{
-    white-space: nowrap;
+.fxs_chip-checkbox .fxs_article_author .fxs_author_description span {
+  white-space: nowrap;
 }
 input[type="checkbox"]:checked + .fxs_chip-checkbox {
   background-color: #dddedf;
@@ -591,18 +592,19 @@ input[type="checkbox"]:checked + .fxs_chip-checkbox {
 .fxs_right-mobile-center {
   text-align: center;
   width: 100%;
-  padding: 1rem 0;
 }
 @media (min-width: 1024px) {
   .fxs_right-mobile-center {
     float: right;
     width: auto;
     text-align: left;
+    padding: 1rem 0;
   }
   .fxs_left-mobile-center {
     float: left;
     width: auto;
     text-align: left;
+    padding: 1rem 0;
   }
 }
 .fxs_txt-underline {
