--- a/boarding.css
+++ b/boarding.css
@@ -51,9 +51,7 @@
   }
 }
 
-.fxs_two-cols-stripe-bg .fxs_onboarding_info {
-  padding: 0;
-}
+
 .fxs_poster .fxs_back,
 .fxs_two-cols-stripe-bg .fxs_back {
   line-height: 28px;
@@ -67,12 +65,17 @@
   left: -1.2rem;
   transform: translateY(-50%);
 }
-.fxs_two-cols-stripe-bg .fxs_onboarding_info .fxs_list_unstyled {
-  margin-top: 2rem;
+@media (min-width: 768px) {
+  .fxs_two-cols-stripe-bg .fxs_onboarding_info .fxs_list_unstyled {
+    margin-top: 2rem;
+  }
 }
 .fxs_poster .fxs_list_unstyled li,
 .fxs_two-cols-stripe-bg .fxs_onboarding_info .fxs_list_unstyled li {
   margin-bottom: 1rem;
+}
+.fxs_two-cols-stripe-bg .fxs_onboarding_info .fxs_list_unstyled li:last-child{
+    margin-bottom: 0;
 }
 .fxs_poster .fxs_list_unstyled .fas,
 .fxs_two-cols-stripe-bg .fxs_onboarding_info .fxs_list_unstyled .fas {
